# data_compression

./: .gitignore  READEME.md  README.md  uvcompress.tar.bz2
assignment1/: .gitignore  uvcompress  uvcompress.cpp
assignment1/my_tests/: book1.Z  book2.Z  news.Z  obj2.Z
assignment1/test_data/output/other/: banana.txt.Z
assignment2/: CMakeLists.txt  LZSS.hpp  LZSSEncoder.hpp  README.md  TestTypeTwo.cpp  TypeOneEncoder.hpp  TypeTwoEncoder.hpp  error.txt  look.txt  prefix_codes.hpp  tail_out.txt  test  test_prefix_codes.cpp  uvgz  uvgz.cpp
assignment2/my_tests/: alice_out.txt  out.txt  salad.txt  tail.txt
assignment3/: .gitignore  CMakeLists.txt  bit_stream.hpp  discrete_cosine_transform.cpp  discrete_cosine_transform.hpp  uvg_common.hpp  uvg_compress.cpp  uvg_decompress.cpp
assignment4/: CMakeLists.txt  README.md  head  uvid_compress.cpp  uvid_decompress.cpp
assignment4/app/: discrete_cosine_transform.cpp  huffman.cpp  stream.cpp
assignment4/include/: discrete_cosine_transform.hpp  helper.hpp  stream.hpp  yuv_stream.hpp
uvcompress/: uvcompress.cpp
uvgz/: CMakeLists.txt  LZSS.cpp  gzstat.py  manual.txt  output_stream.hpp  prefix_codes.hpp  test_prefix_codes.cpp  uvgz.cpp
